package com.g4.odontohub.fluxocaixa.domain;

public enum TipoLancamento {
    ENTRADA,
    SAIDA
}
